Updated script with new code

--- a/lib/scripts/API.ipynb
+++ b/lib/scripts/API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,54 @@
       "0\n",
       "1\n",
       "2\n",
-      "3\n"
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n"
      ]
     }
    ],
@@ -35,21 +82,22 @@
     "\t\"X-RapidAPI-Key\": \"3b11ee2336msh5791c275fc5dbc6p11fa37jsn3cafb1ed4e82\",\n",
     "\t\"X-RapidAPI-Host\": \"worldwide-restaurants.p.rapidapi.com\"\n",
     "}\n",
-    "cuisine_list = ['restaurants']\n",
+    "restaurant_list = ['restaurants']\n",
     "address_list= ['address']\n",
     "category_list = ['category']\n",
     "cuisine_list = ['cuisine']\n",
     "dietary_list = ['dietary requirements']\n",
     "index2 = 0\n",
+    "temp_list = []\n",
     "\n",
     "def get_API_values(url, header, index):\n",
     "    print(index)\n",
-    "    if index == 3:\n",
+    "    if index == 50:\n",
     "        f = open('APIvals.csv', 'w')\n",
     "        for i in range(len(dietary_list)):\n",
     "                # string = '{'\n",
-    "                # string = f'{cuisine_list[i]}, {address_list[i]}, {category_list[i]}, {dietary_list[i]}\\n'\n",
-    "                string = f'{dietary_list[i]}\\n'\n",
+    "                string = f'{restaurant_list[i]}, {address_list[i]}, {category_list[i]}, {dietary_list[i]}\\n'\n",
+    "                # string = f'{dietary_list[i]}\\n'\n",
     "                # string += '},\\n'\n",
     "                f.write(string)\n",
     "                # f.write('\\n')\n",
@@ -79,14 +127,13 @@
     "            restaurant = data[i]['name']\n",
     "            address = data[i]['address']\n",
     "            category = data[i]['category']['name']\n",
-    "            cuisine = data[i]['dietary_restrictions']\n",
-    "            if restaurant not in cuisine_list:\n",
-    "            \n",
-    "                # address_list.append(address)\n",
-    "                # cuisine_list.append(restaurant)\n",
-    "                # category_list.append(category)\n",
-    "                for i in cuisine:\n",
-    "                \n",
+    "            cuisine = data[i]['cuisine']\n",
+    "            if restaurant not in restaurant_list:\n",
+    "                address_list.append(address)\n",
+    "                restaurant_list.append(restaurant)\n",
+    "                category_list.append(category)\n",
+    "                for i in range(len(cuisine)):\n",
+    "                    temp[]\n",
     "                    dietary_list.append(i['name'])\n",
     "                    # print(i['name'])\n",
     "                \n",
