Added cuisine to data input

--- a/lib/scripts/API.ipynb
+++ b/lib/scripts/API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -12,54 +12,7 @@
       "0\n",
       "1\n",
       "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n"
+      "3\n"
      ]
     }
    ],
@@ -88,15 +41,16 @@
     "cuisine_list = ['cuisine']\n",
     "dietary_list = ['dietary requirements']\n",
     "index2 = 0\n",
-    "temp_list = []\n",
+    "# temp_list = []\n",
+    "new_list = []\n",
     "\n",
     "def get_API_values(url, header, index):\n",
     "    print(index)\n",
-    "    if index == 50:\n",
+    "    if index == 3:\n",
     "        f = open('APIvals.csv', 'w')\n",
-    "        for i in range(len(dietary_list)):\n",
+    "        for i in range(len(restaurant_list)):\n",
     "                # string = '{'\n",
-    "                string = f'{restaurant_list[i]}, {address_list[i]}, {category_list[i]}, {dietary_list[i]}\\n'\n",
+    "                string = f'{restaurant_list[i]}, {address_list[i]}, {category_list[i]}, {cuisine_list[i]}\\n'\n",
     "                # string = f'{dietary_list[i]}\\n'\n",
     "                # string += '},\\n'\n",
     "                f.write(string)\n",
@@ -132,9 +86,21 @@
     "                address_list.append(address)\n",
     "                restaurant_list.append(restaurant)\n",
     "                category_list.append(category)\n",
-    "                for i in range(len(cuisine)):\n",
-    "                    temp[]\n",
-    "                    dietary_list.append(i['name'])\n",
+    "                temp_list = []\n",
+    "                for i in range(len(cuisine)-1):\n",
+    "                  \n",
+    "                    if cuisine[i]['name'] not in dietary_reqs:\n",
+    "                        \n",
+    "                        temp_list.append(cuisine[i])\n",
+    "                        \n",
+    "                \n",
+    "                cuisine_list.append(temp_list)\n",
+    "                # temp_list = []\n",
+    "            \n",
+    "            \n",
+    "                # for i in range(len(cuisine)):\n",
+    "                #     temp[]\n",
+    "                #     dietary_list.append(i['name'])\n",
     "                    # print(i['name'])\n",
     "                \n",
     "\n",
@@ -161,7 +127,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
   "orig_nbformat": 4,
