Finished data cleaning

--- a/lib/scripts/API.ipynb
+++ b/lib/scripts/API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,7 @@
     }
    ],
    "source": [
+    "from calendar import day_abbr\n",
     "import requests\n",
     "import urllib\n",
     "import json\n",
@@ -40,6 +41,8 @@
     "category_list = ['category']\n",
     "cuisine_list = ['cuisine']\n",
     "dietary_list = ['dietary requirements']\n",
+    "phone_list = ['Phone No']\n",
+    "price_list = ['Price']\n",
     "index2 = 0\n",
     "# temp_list = []\n",
     "new_list = []\n",
@@ -50,7 +53,7 @@
     "        f = open('APIvals.csv', 'w')\n",
     "        for i in range(len(restaurant_list)):\n",
     "                # string = '{'\n",
-    "                string = f'{restaurant_list[i]}, {address_list[i]}, {category_list[i]}, {cuisine_list[i]}\\n'\n",
+    "                string = f'{restaurant_list[i]}, {address_list[i]}, {category_list[i]}, {price_list[i]}, {phone_list[i]}, {cuisine_list[i]}, {dietary_list[i]}\\n'\n",
     "                # string = f'{dietary_list[i]}\\n'\n",
     "                # string += '},\\n'\n",
     "                f.write(string)\n",
@@ -82,19 +85,30 @@
     "            address = data[i]['address']\n",
     "            category = data[i]['category']['name']\n",
     "            cuisine = data[i]['cuisine']\n",
+    "            try:\n",
+    "                price = data[i]['price']\n",
+    "                phone_number = data[i]['phone']\n",
+    "            except KeyError:\n",
+    "                price = data[i]['price_level']\n",
+    "                phone_number = 'NULL'\n",
+    "         \n",
     "            if restaurant not in restaurant_list:\n",
     "                address_list.append(address)\n",
     "                restaurant_list.append(restaurant)\n",
     "                category_list.append(category)\n",
-    "                temp_list = []\n",
+    "                phone_list.append(phone_number)\n",
+    "                price_list.append(price)\n",
+    "                cuisine_temp_list = []\n",
+    "                dietary_temp_list = []\n",
     "                for i in range(len(cuisine)-1):\n",
     "                  \n",
     "                    if cuisine[i]['name'] not in dietary_reqs:\n",
-    "                        \n",
-    "                        temp_list.append(cuisine[i])\n",
-    "                        \n",
-    "                \n",
-    "                cuisine_list.append(temp_list)\n",
+    "                        cuisine_temp_list.append(cuisine[i])\n",
+    "                    else:\n",
+    "                        dietary_temp_list.append(cuisine[i])\n",
+    "\n",
+    "                cuisine_list.append(cuisine_temp_list)\n",
+    "                dietary_list.append(dietary_temp_list)\n",
     "                # temp_list = []\n",
     "            \n",
     "            \n",
